# lenme_task

./: .gitignore  README.md  pyproject.toml
loan_app/: models.py  serializers.py  tests.py  urls.py  views.py
loan_platform/: asgi.py  urls.py  wsgi.py
